--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     --primary-color: hsl(170, 100%, 26%, 1);
     --headline: hsl(210, 11%, 15%, 1);
     --paragraph: hsl(210, 9%, 31%, 1);
+    --brand-beige: hsl(39, 100%, 97%, 1);
+
     font-size: 62,5%;
 }
 
@@ -64,4 +66,37 @@ button {
 
     margin-left: auto;
     margin-right: auto;
+}
+
+.stats {
+    width: 32.7rem;
+    padding-block: 4rem;
+
+    margin-inline: auto;
+
+    background-color: var(--brand-beige);
+    border: 1px solid var(--paragraph);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 6rem;
+}
+
+.stat h3 {
+    font-size: 4.8rem;
+    color: var(--headline);
+    line-height: 130%;
+
+    margin-bottom: 0.4rem;
+}
+.stat p {
+    margin: 0;
+    color: var(--primary-color);
+    font-size: 1.6rem;
+    line-height: 150%;
+}
+
+header img {
+    display: block;
+    margin-inline: auto;
 }
