--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     --headline: hsl(210, 11%, 15%, 1);
     --paragraph: hsl(210, 9%, 31%, 1);
     --brand-beige: hsl(39, 100%, 97%, 1);
+    --brand-light: hsl(148, 23%, 89%, 1);
+
 
     font-size: 62,5%;
 }
@@ -18,6 +20,19 @@ body {
     text-align: center;
 }
 
+header::before {
+    content: "";
+    width: 100vw;
+    height: 108rem;
+    background-color: var(--brand-light);
+    display: block;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 header {
     width: 37.5rem;
     margin-left: auto;
@@ -25,20 +40,20 @@ header {
     margin-top: 4.1rem;
 }
 
-h4 {
+header h4 {
     font-size: 1.4rem;
     color: var(--primary-color);
     margin-bottom: 1.6rem;
 }
 
-h1 {
+header h1 {
     font-size: 3.4rem;
     color: var(--headline);
     line-height: 130%;
     margin-bottom: 2.4rem;
 }
 
-p {
+header p {
     font-size: 1.8rem;
     line-height: 150%;
     font-weight: 400;
@@ -46,7 +61,7 @@ p {
     margin-bottom: 3.2rem;
 }
 
-button {
+header button {
     background: var(--primary-color);
     border: none;
     border-radius: 0.8rem;
@@ -66,6 +81,12 @@ button {
 
     margin-left: auto;
     margin-right: auto;
+}
+
+header img {
+    display: block;
+    margin-inline: auto;
+    object-position: 0.2rem;
 }
 
 .stats {
@@ -89,6 +110,7 @@ button {
 
     margin-bottom: 0.4rem;
 }
+
 .stat p {
     margin: 0;
     color: var(--primary-color);
@@ -96,7 +118,8 @@ button {
     line-height: 150%;
 }
 
-header img {
-    display: block;
-    margin-inline: auto;
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
